# casq

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  celldesigner2qual.py  help.txt  pyproject.toml  sbgnpd2sbmlq.py  setup.cfg  setup.py  tox.ini  validate.sh
.github/workflows/: main.yml
casq/: __init__.py  bmaExport.py  celldesigner2qual.py  readCD.py  readSBGN.py  simplify.py  utils.py  write.py
conda/: meta.yaml
docs/: api.rst  casq.rst  cli_usage.rst  conf.py  index.rst
test/: E_Prot_CD.xml  E_Prot_SBGNML.xml  JNK_CD.xml  JNK_SBGNML.xml  Nsp4_Nsp6_inter_CD.xml  Nsp4_Nsp6_inter_SBGNML.xml  Orf3a_CD.xml  Orf3a_SBGNML.xml  R-HSA-416482.sbgn  R-HSA-445355.sbgn  R-HSA-5576891.sbgn  R-HSA-8964315.sbgn  Small_Apoptosis.xml  Tgfb_CD.xml  Tgfb_sbgnml.xml  coagulation_CD.xml  coagulation_SBGNML.xml  map_apoptosis_190627.xml  map_mapk.xml  map_mastcell.xml  map_ra_190521.xml  test_casq.py
