[build-system]
requires = [
    "hatchling>=1.5.0",
]
build-backend = "hatchling.build"

[project]
name = "casq"
description = "CaSQ: Celldesigner as Sbml-Qual"
readme = "README.rst"
license = "GPL-3.0"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.7"
authors = [
    { name = "Sylvain Soliman", email = "Sylvain.Soliman@inria.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "loguru>=0.2.5",
    "networkx>=2.2",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinxcontrib.programoutput",
]
dev = [
    "ruff>=0.0.289",
]

[project.scripts]
casq = "casq.celldesigner2qual:main"

[project.urls]
Code = "https://gitlab.inria.fr/soliman/casq/"
Documentation = "https://casq.readthedocs.io/en/latest/"
Homepage = "https://soliman.gitlabpages.inria.fr/casq/"
Mirror = "https://github.com/soli/casq"

[tool.hatch.version]
path = "casq/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/casq",
    "/docs",
    "/test/*.xml",
    "/test/*.py",
    "/conda",
]
exclude = [
    "/casq/.mypy_cache/**",
    "/docs/_build",
]

[tool.hatch.envs.default]
python = "39"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.0.289",
]
python = "39"

[tool.hatch.envs.lint.scripts]
check = [
    "ruff format --diff casq test",
    "ruff check casq test",
]
fmt = [
    "ruff format casq test",
    "ruff check --fix casq test",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest"
]
[[tool.hatch.envs.test.matrix]]
python = ["pypy37", "38", "pypy39", "311"]

[tool.hatch.envs.cov]
dependencies = [
    "pytest",
    "pytest-cov",
]
python = "39"
[tool.hatch.envs.cov.scripts]
# run = "pytest --cov-config=pyproject.toml --cov=casq"
run = "pytest --cov-report xml --cov-report term --cov=casq"


[tool.hatch.envs.docs]
dependencies = [
    "sphinx",
    "sphinxcontrib.programoutput",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -W -b html docs docs/_build/html"
view = [
  "build",
  "open docs/_build/html/index.html",
]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "D", "A", "I", "B"]
ignore = ["D203", "D212", "D213", "E501", "D206", "W191", "C901"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
