[metadata]
name = casq
description = CaSQ: Celldesigner as Sbml-Qual
version = attr:casq.version
long_descriptpon= file: README.rst
long_description_content_type = text/x-rst
author = Sylvain Soliman
author_email = Sylvain.Soliman@inria.fr
url = https://soliman.gitlabpages.inria.fr/casq/
project_urls =
   Documentation = https://casq.readthedocs.io/en/latest/
   Code = https://gitlab.inria.fr/soliman/casq/
   Mirror = https://github.com/soli/casq
license = GPLv3
classifiers =
   Development Status :: 3 - Alpha
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
   networkx>=2.2
   loguru>=0.2.5
python_requires = >=3.5
setup_requires =
   pytest-runner
tests_require =
   pytest

[options.extras_require]
   dev =
      black
      check-manifest
      flake8-mypy

[options.entry_points]
console_scripts =
   executable_name = casq.celldesigner2qual:main

[aliases]
test = pytest

[check-manifest]
ignore = 
   .gitlab-ci.yml
   .readthedocs.yml

[flake8]
max-line-length = 80
ignore = E501,W503
select = C,E,F,W,D,A,I,B,B950
